--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
+* {
+  margin: 0;
+}
 .App {
-  text-align: center;
+  background-color: #fafafa;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__header {
+  background-color: white;
+  padding: 10px 40px;
+  box-shadow: 1px 1px 7px rgba(255, 27, 27, 0.3);
+  object-fit: contain; /*it keep the aspect ratio perfect..*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__headerImage {
+  height: 40px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__signUp {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+.app__signUp Input {
+  margin: 2px;
+}
+.app__signUp Button {
+  padding: 10px;
+  margin-top: 10px;
+}
+.app__body {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.app__post {
+  padding: 25px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media all and (max-width: 768px) {
+  .app__body {
+    flex-direction: column-reverse;
+    align-items: center;
   }
 }
